dark mode and data fetch fix

--- a/public/index.css
+++ b/public/index.css
@@ -21,8 +21,6 @@ body {
 .dark {
   --bg-color: #2f3437;
   --text-color: rgb(255 255 255 / 0.9);
-  background-color: var(--bg-color);
-  color: var(--text-color);
 }
 
 .dark .main,
